@@ -14,6 +14,9 @@
 #define MAGIC_HOTLIST 0xb0f8ad23
 #define MAGIC_CONNECTION 0x3c4474a3
 
+/* swap the bytes of a 16-bit integer */
+#define BSWAP16(c) (((c & 0xff) << 4) | ((c >> 4) & 0xff))
+
 typedef unsigned char uchar;
 
 typedef struct _connection CONNECTION;
